--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "axios": "^0.17.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "proxy": "http://localhost:3001/",
   "scripts": {
